# rust-exercises

./: .gitignore  README.org  rust-piscine.org  schedule.org  summary.org
acronym/: Cargo.toml
arrange_it/: Cargo.toml
arrays/: Cargo.toml
banner/: Cargo.toml
bigger/: Cargo.toml
blood_types/: Cargo.toml
borrow/: Cargo.toml
borrow_box/: Cargo.toml
borrow_me_the_reference/: Cargo.toml
box_it/: Cargo.toml
box_recursion/: Cargo.toml
boxing_todo/: Cargo.toml
card_deck/: Cargo.toml
changes/: Cargo.toml
cipher/: Cargo.toml
circle/: Cargo.toml
closures/: Cargo.toml
collect/: Cargo.toml
commits_stats/: Cargo.toml
commits_stats/src/: lib.rs
copy/: Cargo.toml
counting_words/: Cargo.toml
delete_prefix/: Cargo.toml
doubtful/: Cargo.toml
drawing/: Cargo.toml
drop_the_thread/: Cargo.toml
easy-traits/: Cargo.toml
edit_distance/: Cargo.toml
error_type/: Cargo.toml
events/: Cargo.toml
expected_variable/: Cargo.toml
fibonacci/: Cargo.toml
generics/: Cargo.toml
groceries/: Cargo.toml
handling/: Cargo.toml
harrypotter/: Cargo.toml
hashing/: Cargo.toml
how_many_references/: Cargo.toml
lalgebra_scalar/: Cargo.toml
lalgebra_vector/: Cargo.toml
letter_repeat/: Cargo.toml
lifetimes/: Cargo.toml
looping/: Cargo.toml
matrix/: Cargo.toml
matrix_transposition/: Cargo.toml
mutability/: Cargo.toml
name_initials/: Cargo.toml
options/: Cargo.toml
ownership/: Cargo.toml
panic/: Cargo.toml
pascal_triangle/: Cargo.toml
project_motion/: Cargo.toml
question_mark/: Cargo.toml
ref_cell/: Cargo.toml
(+150 files in other folders)
